<resources>
    <string name="START">ALPHABET</string>
    <string name="sogl">Изучение согласных букв</string>
    <string name="OTADOYA">Изучение букв от А до Я</string>
    <string name="glas">Изучение гласных букв</string>
    <string name="general"> от «А» до «Я» </string>
    <string name="MENU">A</string>
    <string name="m">A</string>
    <string name="glasimage"> </string>
    <string name="glasback">

В
Е
Р
Н
У
Т
Ь

    </string>
    <string name="glasforward">

С
М
Е
Н
И
Т
Ь

    </string>
    <string name="glasmenu">МЕНЮ</string>
    <string name="OK">НАЗАД</string>
    <string name="reference">СПРАВКА</string>
    <string name="GO">НАЧАТЬ</string>
    <string name="TextView">

 Программа разрботана для изучения алфавита
 русского языка.
 Благодаря интерфейсу, содержащему
 изображения букв и их соответствующие звуки,
 ученик сможет изучить русский алфавит наедине с
 самим собой.
        Как работать с программой:
 Начините изучение перейдя в меню.
        Выберите метод изучения:
        "Изучение гласных букв"
        "Изучение согласных букв"
        "Изучение букв от А до Я"
 Рекомендуется изучать в указанном порядке
        Нажмите на кнопку "сменить"
 Рассмотрите изображение и прослушайте звук буквы
        Нажимая на кнопку "вернуть"
 Верните предыдущую букву если она просмотрена
        Нажмите на кнопку "меню"
 (если хотите вернуться к выбору метода изучения)
   </string>
    <string name="ofprogtext">

 Программу разработал Семкин Роман Борисович
 студент отделения информационных технологий
 группы ИС-32.
    </string>
    <string name="ofprog">о программе</string>
</resources>
