<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/zastafka"
    tools:context=".Glasnoe">

    <Button
        android:id="@+id/button9"
        android:layout_width="62dp"
        android:layout_height="258dp"
        android:layout_marginBottom="84dp"
        android:onClick="backSchetchik"
        android:text="@string/glasback"
        android:contentDescription=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"

        />

    <Button
        android:id="@+id/button6"
        android:layout_width="258dp"
        android:layout_height="62dp"
        android:layout_marginBottom="28dp"
        android:onClick="backglasnoe"
        android:text="@string/glasmenu"
        android:contentDescription=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"

        />

    <Button
        android:id="@+id/button8"
        android:layout_width="62dp"
        android:layout_height="258dp"
        android:layout_marginBottom="84dp"
        android:onClick="sschetchik"
        android:text="@string/glasforward"
        android:contentDescription=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"

        />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="300dp"
        android:layout_height="380dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="256dp"
        android:contentDescription="@string/glasimage"
        android:padding="0dp"
        android:scaleType="centerCrop"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc" />

</androidx.constraintlayout.widget.ConstraintLayout>