<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/zastafka"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button14"
        android:layout_width="258dp"
        android:layout_height="62dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="73dp"
        android:onClick="ofprog"
        android:text="@string/ofprog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button12"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button12"
        app:layout_constraintTop_toBottomOf="@+id/button12"
        app:layout_constraintVertical_bias="0.629" />

    <Button
        android:id="@+id/button12"
        android:layout_width="258dp"
        android:layout_height="62dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="73dp"
        android:onClick="spravka"
        android:text="@string/reference"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.201" />

    <Button
        android:id="@+id/button"
        android:layout_width="258dp"
        android:layout_height="62dp"
        android:layout_marginTop="400dp"
        android:onClick="onClick"
        android:text="@string/GO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>